# treno-game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: lib.cpp  lib.hpp  main.cpp
